--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Video Streaming Platform backend service files",
   "license": "ISC",
   "author": "Akshay G",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" :"npm index.js"
+    "dev": "nodemon src/index.js"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11",
+    "prettier": "^3.7.4"
   }
 }
